@startuml

title __COMPANY's Class Diagram__\n
namespace com.company {
    abstract class com.company.Operation {
        + commonOperation1()
    }
  }

   namespace com.company {
      class com.company.User3Operaion {
          + operation3()
      }
    }

  

  namespace com.company {
    interface com.company.IUser2Operations {
        {abstract} + commonOperation1()
        {abstract} + operation2()
    }
  }
  

  namespace com.company {
    interface com.company.IUser3Operations {
        {abstract} + commonOperation1()
        {abstract} + operation3()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  


  

  namespace com.company {
    class com.company.User1Operation {
        + operation1()
    }
  }
  

  namespace com.company {
    class com.company.User2Operation {
        + operation2()
    }
  }
  

 namespace com.company {
     interface com.company.IUser1Operations {
         {abstract} + commonOperation1()
         {abstract} + operation1()
     }
   }
  

  com.company.User1Operation .up.|> com.company.IUser1Operations
  com.company.User1Operation -down-|> com.company.Operation
  com.company.User2Operation .up.|> com.company.IUser2Operations
  com.company.User2Operation -down-|> com.company.Operation
  com.company.User3Operaion .up.|> com.company.IUser3Operations
  com.company.User3Operaion -down-|> com.company.Operation



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
